k8s/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dachshaus-public
---
apiVersion: v1
kind: Namespace
metadata:
  name: dachshaus-services
---
apiVersion: v1
kind: Namespace
metadata:
  name: dachshaus-data
---
apiVersion: v1
kind: Namespace
metadata:
  name: dachshaus-kafka
